# customer_analysis

./: .gitignore  README.md  setup.cfg  streamlit_app.py
config/nn/: rnn_config.json  transformer_config.json
examples/: BigQuery_Data_churn_prediction_Model_RNN.ipynb  BigQuery_Data_churn_prediction_Model_Transformer.ipynb  BigQuery_Data_next_event_prediction_Model_RNN.ipynb
src/customer_analysis/models/nn/: __init__.py  _transformer.py  rnn.py  transformer.py
src/customer_analysis/pipelines/: __init__.py  nn_pipeline.py  rnn_pipeline.py  transformer_pipeline.py
src/customer_analysis/utils/: data_processing.py  functional.py  mlflow_functions.py  nn_datasets.py  visualization.py
streamlit_app/: app_config_update.py
streamlit_app/config/nn/: rnn_churn_config.json  rnn_events_config.json  transformer_churn_config.json  transformer_events_config.json
tests/: test_rnn.py  test_transformer.py
