[metadata]
name = customer_analysis
version = 0.0.1-dev0
description = Customer analysis based on events
long_description  = file: README.md

requires-dist = setuptools
classifiers =
    Programming Language :: Python :: 3.9.5
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
install_requires =
    autopep8==2.0.4
    ipykernel==6.15.3
    ipython==8.5.0
    ipython-genutils==0.2.0
    ipywidgets==7.7.2
    jupyter-client==6.1.12
    jupyter_core==4.11.2
    matplotlib==3.5.1
    matplotlib-inline==0.1.2
    mlflow==2.8.0
    numpy==1.21.5
    pandas==1.4.2
    plotly==5.6.0
    pytest==7.1.2
    seaborn==0.13.0
    setuptools-git==1.2
    torch==1.13.1
    torchmetrics==0.11.1
    torchvision==0.14.1
    tqdm==4.64.0
    streamlit==1.29.0

package_dir = 
    =src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    tests